added generator function to get pickup and drop data based on filters

--- a/nyc_ride_simulation.ipynb
+++ b/nyc_ride_simulation.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,36 +123,104 @@
     "        \"PULocationID\", \n",
     "        \"DOLocationID\"\n",
     "        from nyc_taxi_schema.get_cust_between_timestamps_lgd('{start_time.strftime(\"%Y-%m-%d %H:%M:%S\")}', '{interval_dict[data_size_duration]}');\"\"\"\n",
+    "\n",
+    "\n",
+    "    # Get the adjacency matrix\n",
+    "    interzonal_dist = pd.read_csv(\"./data/interzonal.csv\")\n",
+    "    # Get the dataframe\n",
     "    df_temp = pd.read_sql_query(query, nyc_database)\n",
-    "    return df_temp"
+    "    # Add the distance to all the the rows\n",
+    "    df_temp[\"Distance\"] = df_temp.apply(lambda row: interzonal_dist.iloc[row[\"PULocationID\"]-1, row[\"DOLocationID\"]-1], axis=1)\n",
+    "\n",
+    "    return df_temp.set_index(\"id\", drop=True)\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "data_size_duration = \"1hour\" # This is to get the initial dataframe\n",
+    "df_generated = generate_data(start_time, data_size_duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lgd_flag = {\n",
+    "    \"pickup\": 'PULocationID',\n",
+    "    \"drop\": 'DOLocationID'\n",
+    "} # this flag represents if the pickup is at LGD or Dropoff\n",
+    "\n",
+    "def date_iterator(ts_start, ts_end, delta_in_minutes, flag):\n",
+    "    current = ts_start\n",
+    "    delta = timedelta(minutes=delta_in_minutes)\n",
+    "    while current < ts_end:\n",
+    "        yield df_generated[\n",
+    "            (df_generated['tpep_pickup_datetime'] >= current) & \n",
+    "            (df_generated['tpep_pickup_datetime'] < current + delta) &\n",
+    "            (df_generated[lgd_flag[flag]] == 138)]\n",
+    "\n",
+    "        current += delta\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "start_time = datetime(2019, 1,1, 00, 00,00)\n",
-    "data_size_duration = \"1hour\"\n",
-    "df_jan = generate_data(start_time, data_size_duration)\n",
-    "    "
+    "end_time = start_time + timedelta(minutes=60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 73,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "      tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\nid                                                                  \n11866  2019-01-01 00:04:29   2019-01-01 00:26:02                1   \n\n       PULocationID  DOLocationID  Distance  \nid                                           \n11866           164           138   13397.4  \n     tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\nid                                                                 \n9596  2019-01-01 00:18:09   2019-01-01 00:41:11                1   \n\n      PULocationID  DOLocationID  Distance  \nid                                          \n9596           161           138   12556.8  \n    tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  PULocationID  \\\nid                                                                              \n261  2019-01-01 00:27:06   2019-01-01 00:51:51                1            68   \n\n     DOLocationID  Distance  \nid                           \n261           138   15110.6  \n      tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\nid                                                                  \n12778  2019-01-01 00:38:05   2019-01-01 01:14:38                1   \n\n       PULocationID  DOLocationID  Distance  \nid                                           \n12778            68           138   15110.6  \n      tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\nid                                                                  \n37707  2019-01-01 00:48:38   2019-01-01 01:27:28                2   \n\n       PULocationID  DOLocationID  Distance  \nid                                           \n37707           164           138   13397.4  \nEmpty DataFrame\nColumns: [tpep_pickup_datetime, tpep_dropoff_datetime, passenger_count, PULocationID, DOLocationID, Distance]\nIndex: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Just a demo for drop\n",
+    "for df_filtered in date_iterator(start_time, end_time, 10, \"drop\"):\n",
+    "    print(df_filtered.head(2))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "9.458480834960938\n1239726\n"
+      "id\n5915   2019-01-01 00:02:51\n2455   2019-01-01 00:06:09\nName: tpep_pickup_datetime, dtype: datetime64[ns]\nid\n7296    2019-01-01 00:10:33\n11210   2019-01-01 00:13:38\nName: tpep_pickup_datetime, dtype: datetime64[ns]\nid\n5096   2019-01-01 00:21:07\n7697   2019-01-01 00:22:34\nName: tpep_pickup_datetime, dtype: datetime64[ns]\nid\n1336   2019-01-01 00:30:04\n1291   2019-01-01 00:30:45\nName: tpep_pickup_datetime, dtype: datetime64[ns]\nid\n7782   2019-01-01 00:40:18\n8064   2019-01-01 00:40:44\nName: tpep_pickup_datetime, dtype: datetime64[ns]\nid\n9487   2019-01-01 00:51:31\nName: tpep_pickup_datetime, dtype: datetime64[ns]\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "# Just a demo for pickup\n",
+    "for df_filtered in date_iterator(start_time, end_time, 10, \"pickup\"):\n",
+    "    print(df_filtered['tpep_pickup_datetime'].head(2))"
+   ]
   },
   {
    "source": [
