cleaned code and added idea to phase3 in comments

--- a/nyc_ride_simulation.ipynb
+++ b/nyc_ride_simulation.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,18 +139,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "start_time = datetime(2019, 1,1, 00, 00,00)\n",
+    "end_time = start_time + timedelta(minutes=60)\n",
     "data_size_duration = \"1hour\" # This is to get the initial dataframe\n",
     "df_generated = generate_data(start_time, data_size_duration)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,17 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_time = datetime(2019, 1,1, 00, 00,00)\n",
-    "end_time = start_time + timedelta(minutes=60)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
@@ -205,21 +196,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "id\n5915   2019-01-01 00:02:51\n2455   2019-01-01 00:06:09\nName: tpep_pickup_datetime, dtype: datetime64[ns]\nid\n7296    2019-01-01 00:10:33\n11210   2019-01-01 00:13:38\nName: tpep_pickup_datetime, dtype: datetime64[ns]\nid\n5096   2019-01-01 00:21:07\n7697   2019-01-01 00:22:34\nName: tpep_pickup_datetime, dtype: datetime64[ns]\nid\n1336   2019-01-01 00:30:04\n1291   2019-01-01 00:30:45\nName: tpep_pickup_datetime, dtype: datetime64[ns]\nid\n7782   2019-01-01 00:40:18\n8064   2019-01-01 00:40:44\nName: tpep_pickup_datetime, dtype: datetime64[ns]\nid\n9487   2019-01-01 00:51:31\nName: tpep_pickup_datetime, dtype: datetime64[ns]\n"
+      "     tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\nid                                                                 \n5915  2019-01-01 00:02:51   2019-01-01 00:08:51                1   \n2455  2019-01-01 00:06:09   2019-01-01 00:29:46                2   \n\n      PULocationID  DOLocationID  Distance  \nid                                          \n5915           138            79   15242.4  \n2455           138           170   13219.5  \n      tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\nid                                                                  \n7296   2019-01-01 00:10:33   2019-01-01 00:26:52                1   \n11210  2019-01-01 00:13:38   2019-01-01 00:28:45                1   \n\n       PULocationID  DOLocationID  Distance  \nid                                           \n7296            138           236   12901.0  \n11210           138           140   12094.6  \n     tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\nid                                                                 \n5096  2019-01-01 00:21:07   2019-01-01 00:36:26                1   \n7697  2019-01-01 00:22:34   2019-01-01 00:36:02                1   \n\n      PULocationID  DOLocationID  Distance  \nid                                          \n5096           138           112   10588.4  \n7697           138           263   12709.8  \n     tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\nid                                                                 \n1336  2019-01-01 00:30:04   2019-01-01 00:48:03                1   \n1291  2019-01-01 00:30:45   2019-01-01 00:40:55                1   \n\n      PULocationID  DOLocationID  Distance  \nid                                          \n1336           138           244   15482.5  \n1291           138            95    8799.1  \n     tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\nid                                                                 \n7782  2019-01-01 00:40:18   2019-01-01 00:59:44                1   \n8064  2019-01-01 00:40:44   2019-01-01 00:47:53                2   \n\n      PULocationID  DOLocationID  Distance  \nid                                          \n7782           138            49   15071.8  \n8064           138           260    5719.8  \n     tpep_pickup_datetime tpep_dropoff_datetime  passenger_count  \\\nid                                                                 \n9487  2019-01-01 00:51:31   2019-01-01 01:20:09                1   \n\n      PULocationID  DOLocationID  Distance  \nid                                          \n9487           138            62   17961.5  \n"
      ]
     }
    ],
    "source": [
     "# Just a demo for pickup\n",
     "for df_filtered in date_iterator(start_time, end_time, 10, \"pickup\"):\n",
-    "    print(df_filtered['tpep_pickup_datetime'].head(2))"
+    "    print(df_filtered.head(2))"
    ]
   },
   {
@@ -242,6 +233,9 @@
     "## Stage 3: Visualization\n",
     "\n",
     "This stage is responsible to gather data from stage to for Visualization\n",
+    "\n",
+    "The idea for this phase is, Phase2 at each iteration calls this method. Parameters are TBD. \n",
+    "When this function is called, the merged data and individual data is collated and stored as a DF/File. This can be used later to build graphs. \n",
     "\n",
     "### Input Parameters: \n",
     "* TBD\n",
