added functions to calculate weight and refactored code

--- a/nyc_ride_simulation.ipynb
+++ b/nyc_ride_simulation.ipynb
@@ -81,6 +81,25 @@
     "\n",
     "plt.style.use('ggplot')\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Connect to DB\n",
+    "conn_string = \"postgresql://nycrideshare:nycrideshare@127.0.0.1:5432/nyc_taxi\"\n",
+    "nyc_database = create_engine(conn_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Constants\n",
+    "\n",
+    "# Get the adjacency matrix\n",
+    "interzonal_dist = pd.read_csv(\"./data/interzonal.csv\")\n",
+    "\n",
     "# Constants\n",
     "interval_dict = {\n",
     "    \"1hour\": \"\"\"1 HOURS\"\"\",\n",
@@ -91,16 +110,21 @@
     "pool_size = 300\n",
     "day_in_seconds = 24 * 3600\n",
     "\n",
+    "# The start time representing the start of the analysis \n",
+    "start_time = datetime(2019, 1,1, 00, 00,00)\n",
+    "# Change the End time as required\n",
+    "end_time = start_time + timedelta(minutes=60)\n",
     "\n",
-    "# Connect to DB\n",
-    "\n",
-    "conn_string = \"postgresql://nycrideshare:nycrideshare@127.0.0.1:5432/nyc_taxi\"\n",
-    "nyc_database = create_engine(conn_string)"
+    "# this flag represents if the pickup is at LGD or Dropoff\n",
+    "lgd_flag = {\n",
+    "    \"pickup\": 'PULocationID',\n",
+    "    \"drop\": 'DOLocationID'\n",
+    "} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,28 +149,13 @@
     "        from nyc_taxi_schema.get_cust_between_timestamps_lgd('{start_time.strftime(\"%Y-%m-%d %H:%M:%S\")}', '{interval_dict[data_size_duration]}');\"\"\"\n",
     "\n",
     "\n",
-    "    # Get the adjacency matrix\n",
-    "    interzonal_dist = pd.read_csv(\"./data/interzonal.csv\")\n",
+    "\n",
     "    # Get the dataframe\n",
     "    df_temp = pd.read_sql_query(query, nyc_database)\n",
     "    # Add the distance to all the the rows\n",
     "    df_temp[\"Distance\"] = df_temp.apply(lambda row: interzonal_dist.iloc[row[\"PULocationID\"]-1, row[\"DOLocationID\"]-1], axis=1)\n",
     "\n",
-    "    return df_temp.set_index(\"id\", drop=True)\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "start_time = datetime(2019, 1,1, 00, 00,00)\n",
-    "end_time = start_time + timedelta(minutes=60)\n",
-    "data_size_duration = \"1hour\" # This is to get the initial dataframe\n",
-    "df_generated = generate_data(start_time, data_size_duration)"
+    "    return df_temp.set_index(\"id\", drop=True)\n"
    ]
   },
   {
@@ -155,12 +164,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lgd_flag = {\n",
-    "    \"pickup\": 'PULocationID',\n",
-    "    \"drop\": 'DOLocationID'\n",
-    "} # this flag represents if the pickup is at LGD or Dropoff\n",
+    "# Testing for an hour of data\n",
+    "data_size_duration = \"1hour\" # This is to get the initial dataframe\n",
+    "df_generated = generate_data(start_time, data_size_duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "def date_iterator(ts_start, ts_end, delta_in_minutes, flag):\n",
+    "    '''\n",
+    "    This function is a generator function that returns filtered df rows between the paramerters passed\n",
+    "\n",
+    "    [ts_start]: datetime - start timestamp\n",
+    "    [ts_end]: datetime - end timestamp\n",
+    "    [delta_in_minutes]: int - The value specifies the timedelta for the poolsize\n",
+    "    [flag]: string: it's value is either \"pickup\" or \"drop\"\n",
+    "    '''\n",
     "    current = ts_start\n",
     "    delta = timedelta(minutes=delta_in_minutes)\n",
     "    while current < ts_end:\n",
@@ -175,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "tags": []
    },
@@ -227,6 +251,21 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All the functions that calculate the weight\n",
+    "\n",
+    "def calc_passenger_weight(Pa, Pb, max_passenger_count):\n",
+    "    return (max_passenger_count - (Pa + Pb) < 0)\n",
+    "\n",
+    "def calc_distance_weight(Da, Db):\n",
+    "    pass\n"
+   ]
   },
   {
    "source": [
