--- a/nyc_ride_simulation.ipynb
+++ b/nyc_ride_simulation.ipynb
@@ -271,7 +271,7 @@
     "    for i in edge_set:\n",
     "        tmp_set = set(i)\n",
     "        pairs = pairs.union(tmp_set)\n",
-    "    missing_val = b.difference(pairs) \n",
+    "    missing_val = edge_set.difference(pairs) \n",
     "    edge_set.union(missing_val)\n",
     "\n",
     "    show_viz(edge_set, df_filtered)      "
